# DjangoDjango-Assginment-

./: README.md  base_generic.html  cb_views.py  pyproject.toml  todo_confirm_delete.html  todo_detail.html  todo_form.html  todo_list.html  urls.py
myproject/: base.html  db.sqlite3  todo_info.html  todo_list.html
myproject/myproject/: settings.py
myproject/todo/: urls.py
